# aeon

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: Components.hpp  Resources.hpp  UIComponents.hpp
res/: t_projectile_spritesheet.json  tileset.json
res/textures/spawner/: spritesheet.json
res/textures/t_projectile/: spritesheet.json
res/textures/vlad/: spritesheet.json
res/textures/zloipacan/: spritesheet.json
src/: ResourceLoader.cpp  ResourceLoader.hpp  SoundPlayer.cpp  SoundPlayer.hpp  Systems.cpp  Systems.hpp  main.cpp
src/console/: Console.cpp  Console.hpp
src/game/faction/: Components.hpp
src/game/mob/: Components.hpp  Systems.cpp  Systems.hpp
src/game/singleton/: singleton.cpp  singleton.hpp
src/signal/: Signal.hpp
src/systems/: ComponentSystems.cpp  ComponentSystems.hpp  UIComponentSystems.cpp  UIComponentSystems.hpp
src/utils/: DebugText.hpp  math.cpp  math.hpp
